<resources>
    <string name="app_name">task-planner-app</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_button">Login</string>
    <string name="text_create_account">Do you need an account? Click here</string>
    <string name="insert_full_name_register">Full name</string>
    <string name="email">Email</string>
    <string name="full_name">Full Name</string>
    <string name="number_id">Number ID</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="button_register">Register</string>
    <string name="text_login">Do you have an account? Click here</string>
    <string name="text_register">Do you need an account? Click here</string>
    <string name="description">Description </string>
    <string name="todo">TODO</string>
    <string name="create_task">Create task</string>
    <string name="responsible">Responsible</string>
    <string name="date">Date</string>
    <string name="status">Status</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="create_a_task">Create a task!</string>
    <string name="register_your_user">Register your user!</string>
    <string name="task_list">Task list</string>
    <string name="what_i_must_do">Task:</string>
    <string name="responsible_card">Responsible:</string>
    <string-array name="status_options">
        <item>Pending</item>
        <item>In process</item>
        <item>Completed</item>
    </string-array>
</resources>