<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.UpdateTaskFragment">

    <EditText
        android:id="@+id/update_description_task"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="24dp"
        android:ems="10"
        android:inputType="text"
        android:maxLines="5"
        android:hint="@string/description"
        android:fontFamily="@font/nunito_sans"
        android:textColor="@color/text_color"
        app:layout_constraintBottom_toTopOf="@+id/update_responsible_task"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/update_responsible_task"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="24dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/responsible"
        android:fontFamily="@font/nunito_sans"
        android:textColor="@color/text_color"
        app:layout_constraintBottom_toTopOf="@+id/update_date_task"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/update_date_task"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="24dp"
        android:ems="10"
        android:inputType="date"
        android:hint="@string/date"
        android:fontFamily="@font/nunito_sans"
        android:textColor="@color/text_color"
        app:layout_constraintBottom_toTopOf="@+id/update_status_task"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/update_status_task"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="100dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/status"
        android:fontFamily="@font/nunito_sans"
        android:textColor="@color/text_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        android:importantForAutofill="no" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_update_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:focusable="true"
        android:clickable="true"
        android:src="@drawable/ic_check"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/todo" />

</androidx.constraintlayout.widget.ConstraintLayout>